--- a/test.html
+++ b/test.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html lang="ja" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
     <title></title>
 </head>
 <body>
     <h1>
-        èCê≥ÇµÇ‹ÇµÇΩ
+        edit text
     </h1>
 </body>
 </html>
